--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -19,7 +19,7 @@
       margin: auto;
     }
 
-    h1, h2 {
+    h2 {
       border-bottom: 1px solid #aaa;
       padding-bottom: 0.3em;
       margin-top: 2em;
@@ -56,7 +56,7 @@
 <body>
   <div class="container">
 
-    <h1>Personal</h1>
+    <h2>Personal</h2>
     <p>Hi! My name is Emma. I’m not a big fan of Instagram, but I think it’s important to have some sort of online presence. I’m from Connecticut and Colorado. I go to school in Washington D.C., and I’m really passionate about organizations and decision-making. I’m overly optimistic about the idea that changing systems can improve conditions in the real world.</p>
 
     <p><strong>Ask me about:</strong> all things ethics, complexity science, and voting.</p>
@@ -90,10 +90,10 @@
     <h2>Pictures</h2>
     <p>Some photos from the past year:</p>
     <div class="photo-grid">
-      <img src="photo1.jpg" alt="Photo 1" />
-      <img src="photo2.jpg" alt="Photo 2" />
-      <img src="photo3.jpg" alt="Photo 3" />
-      <!-- Add more <img> tags here as needed -->
+      <img src="emma1.jpg" alt="Emma photo 1" />
+      <img src="emma2.jpg" alt="Emma photo 2" />
+      <img src="emma3.jpg" alt="Emma photo 3" />
+      <img src="emma4.jpg" alt="Emma photo 4" />
     </div>
 
   </div>
