--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
     <h2>Pictures</h2>
     <p>Some photos from the past year:</p>
     <div class="photo-grid">
-      <img src="emma1.jpg" alt="Emma photo 1" />
-      <img src="emma2.jpg" alt="Emma photo 2" />
-      <img src="emma3.jpg" alt="Emma photo 3" />
-      <img src="emma4.jpg" alt="Emma photo 4" />
+      <img src="emma1.jpg" 
+      <img src="emma2.jpg" 
+      <img src="emma3.jpg" 
+      <img src="emma4.jpg" 
     </div>
 
   </div>
