--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     <h2>Personal</h2>
     <p>Hi! My name is Emma. I’m not a big fan of Instagram, but I think it’s important to have some sort of online presence. I’m from Connecticut and Colorado. I go to school in Washington D.C., and I’m really passionate about organizations and decision-making. I’m overly optimistic about the idea that changing systems can improve conditions in the real world.</p>
 
-    <p><strong>Ask me about:</strong> all things ethics, complexity science, and voting.</p>
-    <p><strong>The way to my heart is:</strong> picking up trash and random acts of kindness.<br />
+    <p><strong>Ask me about:</strong> all things ethics, complexity science, and voting</p>
+    <p><strong>The way to my heart is:</strong> picking up trash and random acts of kindness<br />
     <span class="note">*Important addendum: my heart is already romantically taken by a very cool guitarist — @deanmiller.</span></p>
 
-    <p><strong>I am probably thinking about:</strong> rock climbing or existential threats from AI.</p>
-    <p><strong>I am working on:</strong> learning how to code, studying generative ghosts, and improving student governments.</p>
+    <p><strong>I am probably thinking about:</strong> rock climbing or existential threats from AI</p>
+    <p><strong>I am working on:</strong> learning how to code, studying generative ghosts, and improving student governments</p>
     <p><strong>My favorite question to ask is:</strong> What is a metaphor for your brain?<br />
-    (As of May, mine is a lake/aspiring river.)</p>
+    (As of May, mine is a lake/aspiring river)</p>
 
     <p><strong>If you want to reach me:</strong> You can DM me (it will definitely go into the abyss), LinkedIn chat, or text me (may take 2–10 business days).</p>
 
