--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <p><strong>Ask me about:</strong> all things ethics, complexity science, and voting</p>
     <p><strong>The way to my heart is:</strong> picking up trash and random acts of kindness<br />
-    <span class="note">*Important addendum: my heart is already romantically taken by a very cool guitarist — @deanmiller.</span></p>
+    <span class="note">*Important addendum: my heart is already romantically taken by a very cool guitarist — @deanmiller</span></p>
 
     <p><strong>I am probably thinking about:</strong> rock climbing or existential threats from AI</p>
     <p><strong>I am working on:</strong> learning how to code, studying generative ghosts, and improving student governments</p>
