--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
       <li><strong>LinkedIn</strong> (if you’re feeling fancy): <a href="https://www.linkedin.com/in/emmanicotra" target="_blank">linkedin.com/in/emmanicotra</a></li>
       <li><strong>Pinterest</strong> (soo artsy): <a href="https://pin.it/3dNP7XBzf" target="_blank">pin.it/3dNP7XBzf</a></li>
     </ul>
+
+    <h2>Pictures</h2>
+    <p>Some photos from the past year:</p>
+    <div class="photo-grid">
+      <img src="images/emma1.jpg" alt="Emma photo 1" />
+      <img src="images/emma2.jpg" alt="Emma photo 2" />
+      <img src="images/emma3.jpg" alt="Emma photo 3" />
+      <img src="images/emma4.jpg" alt="Emma photo 4" />
+    </div>
     
   </div>
 </body>
